project lap trinh
trang chu

--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -151,11 +151,13 @@
 						<img src="img/CPP.jpg" alt="anh1" title="anh1" class="img-responsive"/>
 					</a>					
 					<div class="khung"> 		
-			            <h3>C++ cơ bản qua ví dụ thực tế</h3>
-			            <h4 class="doanvan gia">600,000đ</h4>		               
-			            <hr noshade size = 4>     
-			            <p class="doanvan">Khóa học C++ cơ bản qua ví dụ được thiết kế đặc biệt cho những người mới học, chưa biết gì về lập trình.
-			           	</p> 		          	 
+			            <h3 class="khoahoc">C++ cơ bản qua ví dụ thực tế</h3>
+			            <h4 class="doanvan gia">600,000đ</h4>
+			            <div class="doanvan">		               
+				            <hr noshade size = 4>     
+				            <p>Khóa học C++ cơ bản qua ví dụ được thiết kế đặc biệt cho những người mới học, chưa biết gì về lập trình.
+				           	</p> 	
+				        </div>   		          	 
 		           	</div> 
 	           	</div>    	
 	   		</div> 
@@ -166,7 +168,7 @@
 						<img src="img/MachineLearning.jpg" alt="anh2" title="anh2" class="img-responsive"/>
 					</a>
 					<div class="khung"> 				
-			            <h3>Nhập môn Machine Learning</h3>
+			            <h3 class="khoahoc">Nhập môn Machine Learning</h3>
 			            <h4 class="doanvan gia">800,000đ</h4>     
 				        <hr noshade size = 4> 
 			       		<p class="doanvan">Học qua dự án nhỏ demo, ngôn ngữ lập trình Python, framework Scikit-Learn, TensorFlow, Mlib trên Spark, Deeplearning4J (For java and Spark integratable).
@@ -181,7 +183,7 @@
 						<img src="img/MagentoLogo.jpg" alt="anh3" title="anh3" class="img-responsive"/>
 					</a>
 					<div class="khung"> 
-						<h3>Xây dựng webiste bán hàng với Magento 2</h3>
+						<h3 class="khoahoc">Xây dựng webiste bán hàng với Magento 2</h3>
 			            <h4 class="doanvan gia">800,000đ</h4>	        
 				        <hr noshade size = 4>	        
 				        <p class="doanvan">Magento là một mã nguồn mở tạo web thương mại điện tử nổi tiếng được viết trên ngôn ngữ PHP - Ngôn ngữ lập trình web phổ biến nhất hiện nay tại Việt Nam. 
@@ -196,9 +198,9 @@
 						<img src="img/php7.jpg" alt="anh4" title="anh4" class="img-responsive"/>
 					</a>
 					<div class="khung"> 			
-					    <h3>Lập trình PHP qua các dự án thực tế</h3>
+					    <h3 class="khoahoc">Lập trình PHP qua các dự án thực tế</h3>
 			            <h4 class="doanvan gia">700,000đ</h4>	        
-				        <hr noshade size = 4 >	        
+				        <hr noshade size = 4>	        
 				        <p class="doanvan">PHP là mã nguồn mở, nó hoàn toàn miễn phí, hỗ trợ người dùng xây dựng website với chi phí tiết kiệm nhất, nhờ đó mà PHP đã trở nên phổ biến một cách rất nhanh chóng trong những năm qua.  
 				        </p>  
 				    </div>     
@@ -214,7 +216,7 @@
 						<img src="img/python_course.jpg" alt="anh5" title="anh5" class="img-responsive"/>
 					</a>					
 					<div class="khung"> 		
-			            <h3>Lập trình Python ứng dụng thực tế</h3>
+			            <h3 class="khoahoc">Lập trình Python ứng dụng thực tế</h3>
 			            <h4 class="doanvan gia">1000,000đ</h4>		               
 			            <hr noshade size = 4>     
 			            <p class="doanvan">Python là một ngôn ngữ lập trình scripting phổ biến và hết sức thú vị. Nó không phải ngôn ngữ có tốc độ thực thi nhanh như Assembly, C, C++.
@@ -229,7 +231,7 @@
 						<img src="img/Rails5Logo.jpg" alt="anh6" title="anh6" class="img-responsive"/>
 					</a>
 					<div class="khung"> 				
-			            <h3>Ruby on Rails 5 qua các dự án</h3>
+			            <h3 class="khoahoc">Ruby on Rails 5 qua các dự án</h3>
 			            <h4 class="doanvan gia">2500,000đ</h4>     
 				        <hr noshade size = 4> 
 			       		<p class="doanvan">Lập trình Ruby on Rails thành thạo qua ít nhất 2 dự án Rails thực tế, mô hình MVC, lập trình theo quy ước thay cho cấu hình (convention over configuration).
@@ -241,10 +243,10 @@
 			<div class="col-xs-6 col-md-3 ">
 				<div class="maunen">
 					<a href="#" class="thumbnail" data-toggle="modal" data-target="#modal7">
-						<img src="img/resteasy_logo_600x.png" alt="anh7" title="anh7" class="img-responsive"/>
+						<img src="img/resteasy_logo_600x copy 2.png" alt="anh7" title="anh7" width="310" height="222" class="img-responsive"/>
 					</a>
 					<div class="khung"> 
-						<h3>Thiết kế RESTful WebServices</h3>
+						<h3 class="khoahoc">Thiết kế RESTful WebServices</h3>
 			            <h4 class="doanvan gia">1000,000đ</h4>	        
 				        <hr noshade size = 4>	        
 				        <p class="doanvan">Khóa học Thiết kế RESTful WebServices với Nodejs giúp các bạn xây dựng được những webservices đơn giản.
@@ -256,12 +258,12 @@
 			<div class="col-xs-6 col-md-3 ">
 				<div class="maunen">
 					<a href="#" class="thumbnail" data-toggle="modal" data-target="#modal8">
-						<img src="img/Swift.jpg" alt="anh8" title="anh8" class="img-responsive"/>
+						<img src="img/Swift.jpg" alt="anh8" title="anh8" width="360" height="250"class="img-responsive"/>
 					</a>
 					<div class="khung"> 			
-					    <h3>Lập trình IOS Swift với toàn bộ mã nguồn</h3>
+					    <h3 class="khoahoc">Lập trình IOS Swift với toàn bộ mã nguồn</h3>
 			            <h4 class="doanvan gia">1800,000đ</h4>	        
-				        <hr noshade size = 4 >	        
+				        <hr noshade size = 4>	        
 				        <p class="doanvan">Học viên có toàn bộ mã nguồn và được hướng dẫn từng bước để thực hiện. Học viên đăng ký học được xem học liệu vĩnh viễn. Khóa học liên tục được cập nhật bài giảng mới, công nghệ mới khi có.  
 				        </p>  
 				    </div>     
