--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -4,7 +4,7 @@
 	<title>Techmaster</title>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="img/logo.png" />
+	<link rel="icon" type="image/png" href="img/images.png" />
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style01.css">
@@ -98,7 +98,7 @@
 				<div class="header">
 					<div class="logo">
 						<a href="trangchu01.html">
-							<img src="img/logo.png">	
+							<img src="img/download.jpeg">	
 						</a>
 					</div>
 					<div class="h_menu">
