--- a/Projekt cac khoa hoc lap trinh/khoahoc.html
+++ b/Projekt cac khoa hoc lap trinh/khoahoc.html
@@ -21,7 +21,7 @@
 		<div class="sign">
 			<div class="signup">
 				<!-- Button đăng ký -->
-				<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#dangky">Đăng ký</button>
+				<button type="button" class="btn btn-primary btn-lg dk" data-toggle="modal" data-target="#dangky">Đăng ký</button>
 
 				<!-- Modal -->
 				<div class="modal fade" id="dangky" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -112,7 +112,7 @@
 									<a href="khoahoc.html" class="img-responsive">Khóa học</a>
 								</li>	
 								<li role="presentation">
-									<a href="codefree.html" class="img-responsive">Code free</a>
+									<a href="codefree.html" class="img-responsive">Code online</a>
 								</li>													
 								<li role="presentation">
 									<a href="lienhe.html" class="img-responsive">Liên hệ</a>
