Projekt cal khoa hoc lap trinh
chua song

--- a/Projekt cac khoa hoc lap trinh/codefree.html
+++ b/Projekt cac khoa hoc lap trinh/codefree.html
@@ -21,11 +21,12 @@
     <body>
 
         <header class="container">
-        <div>
-            <p>
-            </p>
-        </div>   
-            
+
+            <div>
+                <p>
+                </p>
+            </div>
+
             <div class="sign">
                 <div class="signup">
                     <!-- Button đăng ký -->
@@ -88,10 +89,15 @@
                                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                               </div>                          
                               <div class="checkbox">
-                                <label>
+                                <label style = "float: left;">
                                   <input type="checkbox"> Ghi nhớ mật khẩu
                                 </label>
-                                <button style = "float: right;" type="signin" class="btn btn-default">Đăng nhập</button>
+                                <p style = "float: right;"><a href="http://www.w3schools.com/html/">Quên mật khẩu</a></p>
+                              </div> 
+                              <br>
+                              <br>
+                              <div >                           
+                                <button type="signin" class="btn btn-default">Đăng nhập</button>
                               </div>                          
                             </form>
                           </div>                      
@@ -121,10 +127,7 @@
                                     </li>   
                                     <li role="presentation">
                                         <a href="codefree.html" class="img-responsive">Code online</a>
-                                    </li>                                                   
-                                    <li role="presentation">
-                                        <a href="lienhe.html" class="img-responsive">Liên hệ</a>
-                                    </li>
+                                    </li>                       
                                 </ul>
                             </nav>  
                                 <script type="js/javascript.js"></script>       
@@ -132,7 +135,8 @@
                     </div>  
                 </div>
             </div>
-        </header>    
+            <br>                        
+        </header> 
 
         <section class="container">             
 
@@ -218,7 +222,12 @@
                 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#dangnhap">Folk</button>
              </div>  -->
             
-        </section>    
+        </section> 
+
+        <script type="text/javascript" src="javascript.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>    
 
     </body>
 </html>
