--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -78,12 +78,17 @@
 						  <div class="form-group">
 						    <label for="exampleInputPassword1">Mật khẩu</label>
 						    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-						  </div>						  
+						  </div>
 						  <div class="checkbox">
-						    <label>
+						    <label style = "float: left;">
 						      <input type="checkbox"> Ghi nhớ mật khẩu
 						    </label>
-						    <button style = "float: right;" type="signin" class="btn btn-default">Đăng nhập</button>
+						    <p style = "float: right;"><a href="http://www.w3schools.com/html/">Quên mật khẩu</a></p>
+						  </div> 
+						  <br>
+						  <br>
+						  <div >						   
+						    <button type="signin" class="btn btn-default">Đăng nhập</button>
 						  </div>						  
 						</form>
 				      </div>				      
@@ -114,9 +119,6 @@
 								<li role="presentation">
 									<a href="codefree.html" class="img-responsive">Code online</a>
 								</li>													
-								<li role="presentation">
-									<a href="lienhe.html" class="img-responsive">Liên hệ</a>
-								</li>
 							</ul>
 						</nav>	
 							<script type="js/javascript.js"></script>		
@@ -161,7 +163,7 @@
 				            <p>Khóa học C++ cơ bản qua ví dụ được thiết kế đặc biệt cho những người mới học, chưa biết gì về lập trình.
 				           	</p> 	
 				        </div>   		          	 
-		           	</div> 
+		           	</div> 		           			           	
 	           	</div>    	
 	   		</div> 
 	        
