--- a/Projekt cac khoa hoc lap trinh/khoahoc.html
+++ b/Projekt cac khoa hoc lap trinh/khoahoc.html
@@ -80,10 +80,15 @@
 						    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
 						  </div>						  
 						  <div class="checkbox">
-						    <label>
+						    <label style = "float: left;">
 						      <input type="checkbox"> Ghi nhớ mật khẩu
 						    </label>
-						    <button style = "float: right;" type="signin" class="btn btn-default">Đăng nhập</button>
+						    <p style = "float: right;"><a href="http://www.w3schools.com/html/">Quên mật khẩu</a></p>
+						  </div> 
+						  <br>
+						  <br>
+						  <div >						   
+						    <button type="signin" class="btn btn-default">Đăng nhập</button>
 						  </div>						  
 						</form>
 				      </div>				      
@@ -113,10 +118,7 @@
 								</li>	
 								<li role="presentation">
 									<a href="codefree.html" class="img-responsive">Code online</a>
-								</li>													
-								<li role="presentation">
-									<a href="lienhe.html" class="img-responsive">Liên hệ</a>
-								</li>
+								</li>						
 							</ul>
 						</nav>	
 							<script type="js/javascript.js"></script>		
@@ -341,16 +343,25 @@
 		           </div> 
 		        </div>   	             	          	
 	        </div>
-	    </div>		    
+	    </div>	
+
+
 
 	    <nav class="trang" aria-label="Page navigation">
-		  <ul class="pagination">
-		    <li>
+	    	<ul class="pagination">
+		    <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+		    <li class="active"><a href="khoahoc.html">1 <span class="sr-only">(current)</span></a></li>
+		    <li><a href="#">2 <span class="sr-only">(current)</span></a></li>
+		    <li><a href="#">3 <span class="sr-only">(current)</span></a></li>
+		    <li class="enabled"><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+		  	</ul>
+		  <!--<ul class="pagination">
+		    <li class="pr">
 		      <a href="#" aria-label="Previous">
 		        <span aria-hidden="true">&laquo;</span>
 		      </a>
 		    </li>
-		    <li><a href="#">1</a></li>
+		    <li><a href="khoahoc.html" class="active">1</a></li>
 		    <li><a href="#">2</a></li>
 		    <li><a href="#">3</a></li>		    
 		    <li>
@@ -358,7 +369,7 @@
 		        <span aria-hidden="true">&raquo;</span>
 		      </a>
 		    </li>
-		  </ul>
+		  </ul>-->
 		</nav>					
 
 	</section>
