--- a/Projekt cac khoa hoc lap trinh/codefree.html
+++ b/Projekt cac khoa hoc lap trinh/codefree.html
@@ -42,20 +42,20 @@
                           <div class="modal-body">
                             <form>
                               <div class="form-group">
-                                <label for="exampleInputEmail1">Địa chỉ Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                                <label for="Email">Địa chỉ Email</label>
+                                <input type="email" class="form-control" id="Email" placeholder="Email">
                               </div>
                               <div class="form-group">
-                                <label for="exampleInputPassword1">Mật khẩu</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                <label for="Password">Mật khẩu</label>
+                                <input type="password" class="form-control" id="Password" placeholder="Password">
                               </div>                          
                               <div class="form-group">
-                                <label for="exampleInputhoten1">Họ và Tên</label>
-                                <input type="Name" class="form-control" id="exampleInputhoten1" placeholder="Name">
+                                <label for="Name">Họ và Tên</label>
+                                <input type="Name" class="form-control" id="Name" placeholder="Name">
                               </div>
                               <div class="form-group">
-                                <label for="exampleInputtelefon1">Số điện thoại</label>
-                                <input type="Telephone" class="form-control" id="exampleInputtelefon1" placeholder="Telephone">
+                                <label for="Telephone">Số điện thoại</label>
+                                <input type="Telephone" class="form-control" id="Telephone" placeholder="Telephone">
                               </div>
                               <button type="signup" class="btn btn-default">Đăng ký</button>
                             </form>
@@ -80,12 +80,12 @@
                           <div class="modal-body">
                             <form>
                               <div class="form-group">
-                                <label for="exampleInputEmail1">Địa chỉ Email</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                                <label for="Email">Địa chỉ Email</label>
+                                <input type="email" class="form-control" id="Email" placeholder="Email">
                               </div>
                               <div class="form-group">
-                                <label for="exampleInputPassword1">Mật khẩu</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                                <label for="Password">Mật khẩu</label>
+                                <input type="password" class="form-control" id="Password" placeholder="Password">
                               </div>                          
                               <div class="checkbox">
                                 <label style = "float: left;">
@@ -128,8 +128,7 @@
                                         <a href="codefree.html" class="img-responsive">Code online</a>
                                     </li>                       
                                 </ul>
-                            </nav>  
-                                <script type="js/javascript.js"></script>       
+                            </nav>                                        
                         </div>  
                     </div>  
                 </div>
