--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -6,16 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="img/images.png" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="css/style01.css">
-        <style type="text/css" media="screen">
-            #editor { 
-                position: absolute;
-                top: 0;
-                right: 0;
-                bottom: 0;
-                left: 0;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/style01.css">        
     </head>
 
     <body>
@@ -136,43 +127,56 @@
                         </div>  
                     </div>  
                 </div>
-            </div>                                  
+            </div> 
+            <br>                                 
         </header> 
 
         <section class="container">
-            <div class="main_grid">
-                <div class="khoahocc" style="height:90px;">
+            <div class="gioithieukhc">
+                <!--<div class="tenkhoahocc" style="height:90px;">
                     <h2 style ="text-align: center; color: white;"><div style="padding: 15px;">C++ cơ bản qua các ví dụ<br></div></h2>
 
-                    <h5 class="gioithieuc">Khóa học C/C++ online được thiết kế đặc biệt cho người chưa biết gì về lập trình. Video kiến thức được tổ chức chi tiết, cặn kẽ, dễ hiểu, nhiều ví dụ mẫu và kinh nghiệm lập trình, trao đổi trực tuyến với giảng viên. </h5>            
-                </div>              
+                    <h5 class="tomtatkhoahocc">Khóa học C/C++ online được thiết kế đặc biệt cho người chưa biết gì về lập trình. Video kiến thức được tổ chức chi tiết, cặn kẽ, dễ hiểu, nhiều ví dụ mẫu và kinh nghiệm lập trình, trao đổi trực tuyến với giảng viên. </h5>            
+                </div>-->   
+
+                <br>     
+                <div class="tenkhoahocc">
+                    <h2>C++ cơ bản qua các ví dụ</h2>   
+                </div>
+                <br>
+                <div class="tomtatkhoahocc">
+                    <h4 class="tomtatkhoahocc1">Khóa học C/C++ online được thiết kế đặc biệt cho người chưa biết gì về lập trình. Video kiến thức được tổ chức chi tiết, cặn kẽ, dễ hiểu, nhiều ví dụ mẫu và kinh nghiệm lập trình, trao đổi trực tuyến với giảng viên.</h4>
+                </div> 
+                <br>               
+                <!-- Button trigger modal -->
+                <div class="hocngay1">
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#hocngay1"><h3>ĐĂNG KÝ NGAY</h3><h5>Chỉ từ <span>600,000đ</span></h5></button>            
+                </div>
             </div>
 
-            <br>
-
-            <!-- Button trigger modal -->
-            <div class="hocngay">
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h3>ĐĂNG KÝ GẤP</h3><h5>Chỉ từ <span>600,000đ</span></h5></button>            
-            </div>
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                  </div>
-                  <div class="modal-body">
-                    ...
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                <!-- Modal -->
+                <div class="modal fade" id="hocngay1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Chọn gói học phù hợp</h4>
+                      </div>
+                      <div class="modal-body">
+                        <ul class="nav nav-tabs">
+                          <li role="presentation" class="active"><a href="#">Home</a></li>
+                          <li role="presentation"><a href="#">Profile</a></li>              
+                        </ul>  
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
-              </div>
-            </div>
-
+              
+          <br>        
         </section>  
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
